Fix workflow permission

--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -8,7 +8,10 @@ jobs:
   publish:
     name: Publish to npm
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: read
+      deployments: write
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
