--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nishimine/json-stream-parser",
-    "version": "1.0.0",
+    "version": "2.0.2",
     "description": "A lightweight streaming JSON parser with Streams API support for processing large JSON data chunk by chunk",
     "main": "dist/index.cjs",
     "module": "dist/index.mjs",
@@ -48,8 +48,11 @@
         "build": "node build.js",
         "prepublishOnly": "npm run build",
         "test": "jest",
+        "test:e2e": "jest test/e2e",
+        "test:consumer": "jest test/consumer",
+        "test:parser": "jest test/parser",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage",
+        "test:coverage": "jest --coverage --coverageReporters=text --coverageReporters=lcov",
         "typecheck": "npx tsc --noEmit --strict src/index.d.ts",
         "lint": "eslint src/ test/ --ext .js",
         "lint:fix": "eslint src/ test/ --ext .js --fix",
